--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "fix": "pnpm lint:fix && pnpm format:fix && pnpm types"
   },
   "dependencies": {
+    "@coinbase/cdp-core": "^0.0.67",
+    "@coinbase/cdp-hooks": "^0.0.67",
+    "@coinbase/cdp-react": "^0.0.67",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,7 +24,8 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "viem": "^2.39.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
