--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@coinbase/cdp-core": "^0.0.67",
     "@coinbase/cdp-hooks": "^0.0.67",
     "@coinbase/cdp-react": "^0.0.67",
+    "@coinbase/cdp-sdk": "^1.38.6",
     "@nktkas/hyperliquid": "^0.27.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -30,6 +31,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
+    "superjson": "^2.2.5",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "viem": "^2.39.3",
